--- a/main/contact.html
+++ b/main/contact.html
@@ -5,7 +5,6 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
 <link href="../lib/bootstrap-3.0.0/css/bootstrap.min.css" rel="stylesheet" media="screen" />
 <link href="../css/common.css" rel="stylesheet" />
 
@@ -27,26 +26,15 @@
 			</div>
 		</div>
 
-		<div class="row">
-			<div class="col-md-4 about-people">
-				<img alt="" src="../images/about_people.png" />
-			</div>
-			<div class="col-md-8 about-slogan-text">
-				<div class="orange-color myriad-pro-font about-great-design">GREAT DESIGN</div>
-				<div class="black-color myriad-pro-font about-come-from">comes from</div>
-				<div class="blue-color myriad-pro-font about-unique-ideas"> UNIQUE IDEAS </div>
-			</div>
-			<div class="col-md-6 col-md-offset-1">
-				<div class="about-i-icon">
-					<img alt="" src="../images/about_i_icon.png" />
-				</div>
+		<div class="row margin-top-5"></div>
+
+		<div class="row text-center contact-background-top-picture">
+			<div class="contact-top-picture">
+				<img alt="" src="../images/contact_center_picture.png">
 			</div>
 		</div>
 		<div class="row">
-			<div class="about-blue-line"></div>
-		</div>
-		<div class="row">
-			<div class="col-md-3 col-md-offset-5 font-size-25 blue-color page-title">ABOUT US</div>
+			<div class="col-md-3 col-md-offset-5 font-size-25 blue-color contact-page-title">CONTACT</div>
 		</div>
 		<div class="row">
 			<div class="col-md-3"></div>
@@ -56,7 +44,7 @@
 						<div class="row break-line-title"></div>
 						<div class="row vital-navbar">
 							<div class="col-md-3 nav-title">
-								<a class="active" href="about.html">ABOUT US</a>
+								<a href="about.html">ABOUT US</a>
 							</div>
 							<div class="col-md-4 nav-title">
 								<a href="services.html">OUR SERVICES</a>
@@ -65,7 +53,7 @@
 								<a href="client.html">CLIENTS</a>
 							</div>
 							<div class="col-md-3 nav-title text-right">
-								<a href="contact.html">CONTACT</a>
+								<a class="active" href="contact.html">CONTACT</a>
 							</div>
 						</div>
 					</div>
@@ -76,21 +64,62 @@
 
 	<div class="margin-20"></div>
 
-	<div class="container background-grey">
+	<div class="container">
 		<div class="row">
 			<div class="col-md-2"></div>
 			<div class="col-md-8">
-				<div class="row content-title blue-color">At Vital Connections, our consultants are
-					equipped to assist you in your company’s branding in terms of your corporate identity,
-					corporate image and the marketing collaterals used.</div>
-				<div class="row text-center content-picture">
-					<img alt="" src="../images/about_us_center_picture.png">
+				<div class="row contact-content-title">
+					<img alt="" src="../images/vital_connections.png" />
 				</div>
-				<div class="row content-content gray-color">We’re composed of a team of creative foreign
-					and local professionals who place high importance on quality and service. Our creative team
-					will ensure that our promises will be delivered (even if it means going all out to get it done
-					for you). We believe in the long term so your success is our priority because we know that when
-					you grow, we will grow too.</div>
+				<div class="row">
+					<div class="vital-connections-information">
+						<div class="information-header">CTY TNHH Kết Nối V.I.T.A.L</div>
+						<div class="information-content">Vital Connections Co., LTD.</div>
+						<div class="information-content">AA2-3 Mỹ Khang, Phú Mỹ Hưng, Quận 7, TP. HCM</div>
+						<div class="information-content">Tel: 5310 0803 - Fax: 5410 2125</div>
+					</div>
+				</div>
+
+				<form action="">
+					<div class="contact-form">
+						<div class="contact-line">
+							<div class="col-md-2 ">Name*</div>
+							<div class="col-md-10">
+								<input type="text" name="name" size="80" />
+							</div>
+						</div>
+						<div class="contact-line">
+							<div class="col-md-2 ">Company*</div>
+							<div class="col-md-10 ">
+								<input type="text" name="company" size="80" />
+							</div>
+						</div>
+						<div class="contact-line">
+							<div class="col-md-2 ">Email*</div>
+							<div class="col-md-10 ">
+								<input type="text" name="email" size="80" />
+							</div>
+						</div>
+						<div class="contact-line">
+							<div class="col-md-2 ">Tel*</div>
+							<div class="col-md-10 ">
+								<input type="text" name="tel" size="80" />
+							</div>
+						</div>
+						<div class="contact-line">
+							<div class="col-md-2 ">Text*</div>
+							<div class="col-md-10 ">
+								<textarea name="text" rows="7" cols="82"></textarea>
+							</div>
+						</div>
+						<div class="contact-line">
+							<div class="col-md-2 "></div>
+							<div class="col-md-9 text-right button-send">
+								<button class="btn btn-xs">Send</button>
+							</div>
+						</div>
+					</div>
+				</form>
 			</div>
 			<div class="col-md-2"></div>
 		</div>
@@ -102,7 +131,7 @@
 				<div class="row vital-navbar">
 					<div class="col-md-10 col-md-offset-1 text-center nav-bottom">
 						<div class="nav-bottom-title">
-							<a class="active" href="about.html">ABOUT US</a>
+							<a href="about.html">ABOUT US</a>
 						</div>
 						<div class="nav-bottom-title">
 							<a href="services.html">OUR SERVICES</a>
@@ -111,7 +140,7 @@
 							<a href="client.html">CLIENTS</a>
 						</div>
 						<div class="nav-bottom-title">
-							<a href="contact.html">CONTACT</a>
+							<a class="active" href="contact.html">CONTACT</a>
 						</div>
 					</div>
 				</div>
@@ -132,6 +161,5 @@
 		</div>
 		<!-- END FOOTER -->
 	</div>
-
 </body>
 </html>
